edit user login and register
